--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@ background-image:
 </div><p>ROTATE THE CUBE</p>
           <div id='left-sidebar'>
                   
-                 <center> <img src="sthomp18.github.io/images/giphy (1).gif" height='50' width='50'/></center>
+                 <center><a href= 'https://www.instagram.com/diamondrolls/' target="_blank">
+                             <img src="sthomp18.github.io/images/giphy (1).gif" 
+                              height='50' width='50' ALT="instagram"></a></center>
                   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=diamondrolls-20&marketplace=amazon&region=US&placement=B004G5Z1HM&asins=B004G5Z1HM&linkId=86b5e7414886ba76b80b0fc9a037214c&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
     </iframe>
                   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=diamondrolls-20&marketplace=amazon&region=US&placement=B011B45FZS&asins=B011B45FZS&linkId=fbee9fce61a5f453eeb8b25af5f6fc75&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
@@ -155,7 +157,7 @@ background-image:
           <div id='right-sidebar'>
                   
             <center><a href= 'https://www.instagram.com/diamondrolls/' target="_blank">
-                             <img src='sthomp18.github.io/images/fh.jpg' 
+                             <img src="sthomp18.github.io/images/giphy (1).gif" 
                               height='50' width='50' ALT="instagram"></a></center>
           <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=diamondrolls-20&marketplace=amazon&region=US&placement=B07D89D4QD&asins=B07D89D4QD&linkId=f9df8460a3369386974241ee246d1bd3&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
     </iframe>
