--- a/index.html
+++ b/index.html
@@ -178,9 +178,10 @@ background-image:
                            <center>  <img src='sthomp18.github.io/images/fh.jpg' 
                               height='50' width='50' ALT="instagram"></a></center></button>                       
                          
-          <a href="https://www.amazon.com/gp/product/B00RMG302A/ref=as_li_tl?ie=UTF8&tag=diamondrolls-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B00RMG302A&linkId=aa3b43c76fac14737d7d4838302d55c8/" target='_blank'> 
-      <img src='sthomp18.github.io/images/40779065_304510887000997_2681758295219240960_n.jpg'
-            height='400px'width='500px'/><p> New Mens Compression Sports Wear</p></a>
+         <button> <a href="https://www.amazon.com/gp/product/B00RMG302A/ref=as_li_tl?ie=UTF8&tag=diamondrolls-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B00RMG302A&linkId=aa3b43c76fac14737d7d4838302d55c8/" target='_blank'> 
+     <center> <img src='sthomp18.github.io/images/40779065_304510887000997_2681758295219240960_n.jpg'
+           height='400px'width='500px'/></center>
+             <center> <h3> New Mens Compression Sports Wear</h3></a></center></button>
            
       <div class= "awesomecontainer"/>
          <h2>Healthy Living And Positivity</h2>
