--- a/index.html
+++ b/index.html
@@ -162,7 +162,20 @@ background-image:
     </iframe>
                   </div> 
           <div id='right-sidebar'>
-          
+          <button>
+      <img src='sthomp18.github.io/images/40875963_1816365625151386_383763329421672448_n.jpg' height='500px' width='600px'/>
+                   <ul>
+                         <li><a href='https://www.amazon.com/gp/product/B0195SWA28/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=diamondrolls-20&creative=9325&linkCode=as2&creativeASIN=B0195SWA28&linkId=429d7e5a347430b8155a8da1b5f1eca3/'>
+                                  <img src='sthomp18.github.io/images/last kings.jpg' height='50px' width='50px' target='_blank'/></a>
+                                     </li>
+                         <li><a href='https://www.amazon.com/gp/product/B07H12LHYF/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=diamondrolls-20&creative=9325&linkCode=as2&creativeASIN=B07H12LHYF&linkId=8ecbd4c2f6985a5a33bc9f33bc5b1e6d/'>
+                                  <img src='sthomp18.github.io/images/blk prmd.jpg' height='50px' width='50px' target='_blank'/></a>
+                                     </li>
+                         <li><a href='https://www.amazon.com/gp/product/B075DTD1FG/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=diamondrolls-20&creative=9325&linkCode=as2&creativeASIN=B075DTD1FG&linkId=c9c9fe5c52f694738a29809010849ee5/'>
+                                  <img src='sthomp18.github.io/images/rolex_logo.jpg' height='50px' width='50px' target='_blank'/></a>
+                                     </li>
+                            </ul></button>
+    
                    <button><a href='https://noheartapparel.com/' target='_blank'>
                         <center>  <img src='sthomp18.github.io/images/40683790_2138309002887339_1106618252462653440_n.png'
                                        height='500px' width='500px'/>
