--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ background-image:
       </div>
     </div>
   </div>
-</div><p>ROTATE THE CUBE</p>
+</div>
           <div id='left-sidebar'>
                   
                  <center><a href= 'https://www.instagram.com/diamondrolls/' target="_blank">
