--- a/index.html
+++ b/index.html
@@ -161,18 +161,19 @@ background-image:
           <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=diamondrolls-20&marketplace=amazon&region=US&placement=B00J074W94&asins=B00J074W94&linkId=d8ed76ad9bdf2714dd963c79e8de2299&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
     </iframe>
                  
-                     <div class= "awesomecontainer"/>
-         <h2>Healthy Living And Positivity</h2>
-         <p>Maybe if candy was around and easily accessed there would be less drug-
+       
+                         </div> 
+          <div id='right-sidebar'>
+             <div class= "awesomecontainer"/>
+        <center><h2>Healthy Living And Positivity</h2></center>
+       <center>  <p>Maybe if candy was around and easily accessed there would be less drug-
                   addicted kids.The cube is rotatable and leads to different pages of this site. 
                   Use it to navigate through the site. Our mission is to help people live well
                   and make sure everyone knows atleast the basics of living a healthy and 
                   fullfilling life. If you want your product or app on this sites home page 
-                  feel free to contact us at</p>
+                  feel free to contact us at</p></center>
          </div>    
-                         </div> 
-          <div id='right-sidebar'>
-          <button>
+                   <button>
       <img src='sthomp18.github.io/images/40875963_1816365625151386_383763329421672448_n.jpg' height='500px' width='600px'/>
                    <ul>
                          <li><a href='https://www.amazon.com/gp/product/B0195SWA28/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=diamondrolls-20&creative=9325&linkCode=as2&creativeASIN=B0195SWA28&linkId=429d7e5a347430b8155a8da1b5f1eca3/'>
