--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
          <link href= 'sthomp18.github.io/style.css' rel= 'stylesheet'>
-       
+       <link rel="icon" type="img/gif" href="sthomp18.github.io/images/giphy (1).gif"/>
   
 <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
          <ul>
