--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   });
 </script>
             
-   
+             <meta name="title" content="Diamondrolls">
            <meta name="author" content="Solomon Shamir Thompson">
            <meta name="description" content="how to make money online">
            <meta name="keywords" content= "diamondrolls, diamonds, money, marketing">
