--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
          <link href= 'sthomp18.github.io/style.css' rel= 'stylesheet'>
-       <link rel="fluid-icon" href="sthomp18.github.io/images/giphy (1).gif" title="Diamondrolls"/>
+       <link rel="fluid-icon" href="sthomp18.github.io/images/giphy (1).gif" title="Diamondrolls">
              <title>Diamondrolls / Healthy Living, Positive Vibes, Prosperity</title>
           
          <meta name="author" content="Solomon Shamir Thompson">
