--- a/index.html
+++ b/index.html
@@ -174,7 +174,21 @@ background-image:
                   fullfilling life. If you want your product or app on this sites home page 
                   feel free to contact us at</p></center>
          </div>    
-                   <button>
+                  <div id="carousel">
+  <figure id="spinner">
+    <img src="wanaka-tree.jpg" alt>
+    <img src="still-lake.jpg" alt>
+    <img src="pink-milford-sound.jpg" alt>
+    <img src="paradise.jpg" alt>
+    <img src="morekai.jpg" alt>
+    <img src="milky-blue-lagoon.jpg" alt>
+    <img src="lake-tekapo.jpg" alt>
+    <img src="milford-sound.jpg" alt>
+  </figure>
+</div>
+<span style="float:left" class="ss-icon" onclick="galleryspin('-')">&lt;</span>
+<span style="float:right" class="ss-icon" onclick="galleryspin('')">&gt;</span>
+                         <button>
       <img src='sthomp18.github.io/images/40875963_1816365625151386_383763329421672448_n.jpg' height='500px' width='600px'/>
                    <ul>
                          <li><a href='https://www.amazon.com/gp/product/B0195SWA28/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=diamondrolls-20&creative=9325&linkCode=as2&creativeASIN=B0195SWA28&linkId=429d7e5a347430b8155a8da1b5f1eca3/'>
@@ -207,7 +221,13 @@ background-image:
          </div>
          </div>
          <script>
-          var events = new Events();
+          var angle = 0;
+function galleryspin(sign) { 
+spinner = document.querySelector("#spinner");
+if (!sign) { angle = angle + 45; } else { angle = angle - 45; }
+spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-transform: rotateY("+ angle +"deg); transform: rotateY("+ angle +"deg);");
+}
+                  var events = new Events();
 events.add = function(obj) {
   obj.events = { };
 }
