--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@ background-image:
                   fullfilling life. If you want your product or app on this sites home page 
                   feel free to contact us at</p></center>
          </div>    
-                  <div id="carousel">
+     <base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/wanaka-tree.jpg">
+              <div id="carousel">
   <figure id="spinner">
     <img src="wanaka-tree.jpg" alt>
     <img src="still-lake.jpg" alt>
