--- a/index.html
+++ b/index.html
@@ -179,15 +179,20 @@ background-image:
   <figure id="spinner">
     <button><img src="sthomp18.github.io/images/dollar-signs-and-cash-smiley-emoticon.gif"
                           width="150" height="50" ALT="investments"/></button>
-    
+    <button><img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+                          width="150" height="50" ALT="login"/></button>
     <button><img src="sthomp18.github.io/images/emoji_celebs_225-1.jpg"
                           width="150" height="50" ALT="territory" /></button>
-    
+    <button><img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+                          width="150" height="50" ALT="login"/></button>
     <button><img src="sthomp18.github.io/images/emoji_celebs_148-1.jpg"
                           width="150" height="50" ALT="books" /></button>
-    <img src="milky-blue-lagoon.jpg" alt>
-    <img src="lake-tekapo.jpg" alt>
-    <img src="milford-sound.jpg" alt>
+    <button><img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+                          width="150" height="50" ALT="login"/></button>
+    <button><img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+                          width="150" height="50" ALT="login"/></button>
+    <button><img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+                          width="150" height="50" ALT="login"/></button>
   </figure>
 </div>
 <span style="float:left" class="ss-icon" onclick="galleryspin('-')">&lt;</span>
