--- a/index.html
+++ b/index.html
@@ -177,22 +177,22 @@ background-image:
      
               <div id="carousel">
   <figure id="spinner">
-    <button><img src="sthomp18.github.io/images/dollar-signs-and-cash-smiley-emoticon.gif"
-                          width="150" height="50" ALT="investments"/></button>
-    <button><img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
-                          width="150" height="50" ALT="login"/></button>
-    <button><img src="sthomp18.github.io/images/emoji_celebs_225-1.jpg"
-                          width="150" height="50" ALT="territory" /></button>
-    <button><img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
-                          width="150" height="50" ALT="login"/></button>
-    <button><img src="sthomp18.github.io/images/emoji_celebs_148-1.jpg"
-                          width="150" height="50" ALT="books" /></button>
-    <button><img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
-                          width="150" height="50" ALT="login"/></button>
-    <button><img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
-                          width="150" height="50" ALT="login"/></button>
-    <button><img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
-                          width="150" height="50" ALT="login"/></button>
+    <img src="sthomp18.github.io/images/dollar-signs-and-cash-smiley-emoticon.gif"
+                           ALT="investments"/>
+    <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+                           ALT="login"/>
+    <img src="sthomp18.github.io/images/emoji_celebs_225-1.jpg"
+                           ALT="territory" />
+    <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+                          ALT="login"/>
+    <img src="sthomp18.github.io/images/emoji_celebs_148-1.jpg"
+                          ALT="books" />
+    <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+                          ALT="login"/>
+    <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+                          ALT="login"/>
+    <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+                          ALT="login"/>
   </figure>
 </div>
 <span style="float:left" class="ss-icon" onclick="galleryspin('-')">&lt;</span>
