--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@ background-image:
      
               <div id="carousel">
   <figure id="spinner">
-    <img src="sthomp18.github.io/images/dollar-signs-and-cash-smiley-emoticon.gif"
+   <a href="https://www.facebook.com/" target="_blank"> <img src="sthomp18.github.io/images/fb-art.png"
                            ALT="investments"/>
     <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
                            ALT="login"/>
-    <img src="sthomp18.github.io/images/emoji_celebs_225-1.jpg"
+    < href="https://www.pinterest.com/" target="_blank"><img src="sthomp18.github.io/images/pinterest.png"
                            ALT="territory" />
     <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
                           ALT="login"/>
-    <img src="sthomp18.github.io/images/emoji_celebs_148-1.jpg"
+    <a href="https://www.youtube.com/" target="_blank"><img src="sthomp18.github.io/images/red-youtube-logo-icon-8.png"
                           ALT="books" />
     <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
                           ALT="login"/>
-    <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+    <a href="https://twitter.com/" target="_blank"><img src="sthomp18.github.io/images/twitter.png"
                           ALT="login"/>
     <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
                           ALT="login"/>
