--- a/index.html
+++ b/index.html
@@ -126,21 +126,21 @@ background-image:
      
               <div id="carousel">
   <figure id="spinner">
-   <a href="https://www.facebook.com/" target="_blank"> <img src="sthomp18.github.io/images/fb-art.png"
+   <img src="sthomp18.github.io/images/fb-art.png"
                            ALT="investments"/>
-    <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+    <img src="sthomp18.github.io/images/twitch.png"
                            ALT="login"/>
-    < href="https://www.pinterest.com/" target="_blank"><img src="sthomp18.github.io/images/pinterest.png"
+    <img src="sthomp18.github.io/images/pinterest.png"
                            ALT="territory" />
-    <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+    <img src="sthomp18.github.io/images/linkedin_logo-transparent-background.png"
                           ALT="login"/>
-    <a href="https://www.youtube.com/" target="_blank"><img src="sthomp18.github.io/images/red-youtube-logo-icon-8.png"
+    <img src="sthomp18.github.io/images/red-youtube-logo-icon-8.png"
                           ALT="books" />
-    <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+    <img src="sthomp18.github.io/images/wordpress-logo1.png"
                           ALT="login"/>
-    <a href="https://twitter.com/" target="_blank"><img src="sthomp18.github.io/images/twitter.png"
+    <img src="sthomp18.github.io/images/twitter.png"
                           ALT="login"/>
-    <img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
+    <img src="sthomp18.github.io/images/github.png"
                           ALT="login"/>
   </figure>
 </div>
