--- a/index.html
+++ b/index.html
@@ -140,6 +140,29 @@ background-image:
                           ALT="login"/>
     <img src="sthomp18.github.io/images/twitter.png"
                           ALT="login"/>
+    <img src="sthomp18.github.io/images/wordpress-logo1.png"
+                          ALT="login"/>
+  </figure>
+</div>
+<span style="float:left" class="ss-icon" onclick="galleryspin('-')">&lt;</span>
+<span style="float:right" class="ss-icon" onclick="galleryspin('')">&gt;</span>
+         
+         <div id="carousel">
+  <figure id="spinner">
+   <img src="sthomp18.github.io/images/fb-art.png"
+                           ALT="investments"/>
+    <img src="sthomp18.github.io/images/twitch.png"
+                           ALT="login"/>
+    <img src="sthomp18.github.io/images/pinterest.png"
+                           ALT="territory" />
+    <img src="sthomp18.github.io/images/linkedin_logo-transparent-background.png"
+                          ALT="login"/>
+    <img src="sthomp18.github.io/images/red-youtube-logo-icon-8.png"
+                          ALT="books" />
+    <img src="sthomp18.github.io/images/wordpress-logo1.png"
+                          ALT="login"/>
+    <img src="sthomp18.github.io/images/twitter.png"
+                          ALT="login"/>
     <img src="sthomp18.github.io/images/github.png"
                           ALT="login"/>
   </figure>
