--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ background-image:
                           ALT="login"/>
     <img src="sthomp18.github.io/images/twitter.png"
                           ALT="login"/>
-    <img src="sthomp18.github.io/images/wordpress-logo1.png"
+    <img src="sthomp18.github.io/images/tumblr-logo.png"
                           ALT="login"/>
   </figure>
 </div>
@@ -163,7 +163,7 @@ background-image:
                           ALT="login"/>
     <img src="sthomp18.github.io/images/twitter.png"
                           ALT="login"/>
-    <img src="sthomp18.github.io/images/github.png"
+    <img src="sthomp18."
                           ALT="login"/>
   </figure>
 </div>
