--- a/index.html
+++ b/index.html
@@ -124,17 +124,17 @@ background-image:
   <figure id="spinner">
    <img src="sthomp18.github.io/images/fb-art.png"
                            ALT="investments"/>
-    <img src="sthomp18.github.io/images/twitch.png"
+    <img src="sthomp18.github.io/images/bugatti_PNG25.png"
                            ALT="login"/>
-    <img src="sthomp18.github.io/images/pinterest.png"
+    <img src="sthomp18.github.io/images/Healthy-Food-PNG-Picture.png"
                            ALT="territory" />
-    <img src="sthomp18.github.io/images/linkedin_logo-transparent-background.png"
+    <img src="sthomp18.github.io/images/audra_exercise-01.png"
                           ALT="login"/>
-    <img src="sthomp18.github.io/images/red-youtube-logo-icon-8.png"
+    <img src="sthomp18.github.io/images/gold_PNG11028.png"
                           ALT="books" />
-    <img src="sthomp18.github.io/images/wordpress-logo1.png"
+    <img src="sthomp18.github.io/images/yoga.png"
                           ALT="login"/>
-    <img src="sthomp18.github.io/images/twitter.png"
+    <img src="sthomp18.github.io/images/colors-red-graph-sales-growth-statistics-png-20.png"
                           ALT="login"/>
     <img src="sthomp18.github.io/images/tumblr-logo.png"
                           ALT="login"/>
