--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@ background-image:
                            ALT="login"/>
     <img src="sthomp18.github.io/images/Healthy-Food-PNG-Picture.png"
                            ALT="territory" />
-    <img src="sthomp18.github.io/images/audra_exercise-01.png"
+    <img src="sthomp18.github.io/images/excessive exercise.png"
                           ALT="login"/>
     <img src="sthomp18.github.io/images/gold_PNG11028.png"
                           ALT="books" />
     <img src="sthomp18.github.io/images/yoga.png"
                           ALT="login"/>
-    <img src="sthomp18.github.io/images/colors-red-graph-sales-growth-statistics-png-20.png"
+    <img src="sthomp18.github.io/images/1000px-Emblem-money.svg.png"
                           ALT="login"/>
-    <img src="sthomp18.github.io/images/tumblr-logo.png"
+    <img src="sthomp18.github.io/images/apple-computer-laptop-mac-monitor-screen-icon--icon-search--16.png"
                           ALT="login"/>
   </figure>
 </div>
