--- a/index.html
+++ b/index.html
@@ -142,8 +142,12 @@ background-image:
 </div>
 <span style="float:left" class="ss-icon" onclick="galleryspin('-')">&lt;</span>
 <span style="float:right" class="ss-icon" onclick="galleryspin('')">&gt;</span>
-       <center> <iframe width="560" height="315" src="https://www.youtube.com/embed/4bOJbPxalAA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center>                
-                         <button>
+       <center><button><iframe width="560" height="315" src="https://www.youtube.com/embed/4bOJbPxalAA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center>                
+                         <a href= 'https://www.instagram.com/ognappy_longlocs/' target="_blank">
+                                    <h1>OG Nappy LongLocs</h1>
+                                  <img src='sthomp18.github.io/images/fh.jpg' 
+                              height='50' width='50' ALT="instagram"></a></button></center>
+         <button>
       <img src='sthomp18.github.io/images/40875963_1816365625151386_383763329421672448_n.jpg' height='500px' width='600px'/>
                    <ul>
                          <li><a href='https://www.amazon.com/gp/product/B0195SWA28/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=diamondrolls-20&creative=9325&linkCode=as2&creativeASIN=B0195SWA28&linkId=429d7e5a347430b8155a8da1b5f1eca3/'>
@@ -165,6 +169,12 @@ background-image:
                            <center>  <img src='sthomp18.github.io/images/fh.jpg' 
                               height='50' width='50' ALT="instagram"></a></center></button>                       
                          <br>
+        <center><button><iframe width="560" height="315" src="https://www.youtube.com/embed/muzQM1hApXo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <a href= 'https://www.instagram.com/joeycooksalot/' target="_blank">
+                         <h1>Joey Cooks Alot</h1>
+                           <center>  <img src='sthomp18.github.io/images/fh.jpg' 
+                              height='50' width='50' ALT="instagram"></a></center></button></center>
+        
          <button> <a href="https://www.amazon.com/gp/product/B00RMG302A/ref=as_li_tl?ie=UTF8&tag=diamondrolls-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B00RMG302A&linkId=aa3b43c76fac14737d7d4838302d55c8/" target='_blank'> 
      <center> <img src='sthomp18.github.io/images/40779065_304510887000997_2681758295219240960_n.jpg'
            height='400px'width='600px'/></center>
