--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ new Cube({
  </body>
 <footer> 
         
-                <img src="sthomp18.github.io/images/Fruit-PNG-File.png" width="960px"/>  
+            <center>    <img src="sthomp18.github.io/images/Fruit-PNG-File.png" width="960px"/>  </center>
          </footer>
                     </html>
 
