--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ background-image:
      
               <div id="carousel">
   <figure id="spinner">
-   <img src="sthomp18.github.io/images/fb-art.png"
-                           ALT="investments"/>
+  <a href='http://diamondrolls.tk/' target='_blank'><img src="sthomp18.github.io/images/fb-art.png"
+                           ALT="investments"/><a>
     <img src="sthomp18.github.io/images/bugatti_PNG25.png"
                            ALT="login"/>
     <img src="sthomp18.github.io/images/Healthy-Food-PNG-Picture.png"
