--- a/index.html
+++ b/index.html
@@ -122,22 +122,22 @@ background-image:
      
               <div id="carousel">
   <figure id="spinner">
-  <a href='http://diamondrolls.tk/' target='_blank'><img src="sthomp18.github.io/images/fb-art.png"
+  <a href='https://amzn.to/2wR3pbI/' target='_blank'><img src="sthomp18.github.io/images/snickers_PNG13928.png"
                            ALT="investments"/></a>
-    <img src="sthomp18.github.io/images/bugatti_PNG25.png"
-                           ALT="login"/>
-    <img src="sthomp18.github.io/images/Healthy-Food-PNG-Picture.png"
-                           ALT="territory" />
-    <img src="sthomp18.github.io/images/excessive exercise.png"
-                          ALT="login"/>
-    <img src="sthomp18.github.io/images/gold_PNG11028.png"
-                          ALT="books" />
-    <img src="sthomp18.github.io/images/yoga.png"
-                          ALT="login"/>
-    <img src="sthomp18.github.io/images/1000px-Emblem-money.svg.png"
-                          ALT="login"/>
-    <img src="sthomp18.github.io/images/apple-computer-laptop-mac-monitor-screen-icon--icon-search--16.png"
-                          ALT="login"/>
+    <a href='https://amzn.to/2wQ86Sd' target='_blank'><img src="sthomp18.github.io/images/just because.png"
+                           ALT="login"/></a>
+    <a href='https://amzn.to/2wS1GD8' target='_blank'><img src="sthomp18.github.io/images/bottles.png"
+                           ALT="territory" /></a>
+    <a href='https://amzn.to/2wS9BjM' target='_blank'><img src="sthomp18.github.io/images/gfwpi_white_space_width.png"
+                          ALT="login"/></a>
+    <a href='https://amzn.to/2oN0P1Z' target='_blank'><img src="sthomp18.github.io/images/original-main.png"
+                          ALT="books" /></a>
+    <a href='https://amzn.to/2oNyJUt' target='_blank'><img src="sthomp18.github.io/images/bj.png"
+                          ALT="login"/></a>
+    <a href='https://amzn.to/2M7NRoK/' target='_blank'><img src="sthomp18.github.io/images/kicproductimage-127615_strawberry_resized.png"
+                          ALT="login"/></a>
+    <a href='https://amzn.to/2NVKGlG/' target='_blank'><img src="sthomp18.github.io/images/tumblr_onjabnf4tk1txe8e9o1_500.png"
+                          ALT="login"/></a>
   </figure>
 </div>
 <span style="float:left" class="ss-icon" onclick="galleryspin('-')">&lt;</span>
