--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@ background-image:
   <figure id="spinner">
   <a href='https://amzn.to/2wR3pbI/' target='_blank'><img src="sthomp18.github.io/images/snickers_PNG13928.png"
                            ALT="investments"/></a>
-    <a href='https://amzn.to/2wQ86Sd' target='_blank'><img src="sthomp18.github.io/images/just because.png"
+    <a href='https://amzn.to/2wQ86Sd/' target='_blank'><img src="sthomp18.github.io/images/just because.png"
                            ALT="login"/></a>
-    <a href='https://amzn.to/2wS1GD8' target='_blank'><img src="sthomp18.github.io/images/bottles.png"
+    <a href='https://amzn.to/2wS1GD8/' target='_blank'><img src="sthomp18.github.io/images/bottles.png"
                            ALT="territory" /></a>
-    <a href='https://amzn.to/2wS9BjM' target='_blank'><img src="sthomp18.github.io/images/gfwpi_white_space_width.png"
+    <a href='https://amzn.to/2wS9BjM/' target='_blank'><img src="sthomp18.github.io/images/gfwpi_white_space_width.png"
                           ALT="login"/></a>
-    <a href='https://amzn.to/2oN0P1Z' target='_blank'><img src="sthomp18.github.io/images/original-main.png"
+    <a href='https://amzn.to/2oN0P1Z/' target='_blank'><img src="sthomp18.github.io/images/original-main.png"
                           ALT="books" /></a>
-    <a href='https://amzn.to/2oNyJUt' target='_blank'><img src="sthomp18.github.io/images/bj.png"
+    <a href='https://amzn.to/2oNyJUt/' target='_blank'><img src="sthomp18.github.io/images/bj.png"
                           ALT="login"/></a>
     <a href='https://amzn.to/2M7NRoK/' target='_blank'><img src="sthomp18.github.io/images/kicproductimage-127615_strawberry_resized.png"
                           ALT="login"/></a>
