--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@ background-image:
               <div id="carousel">
   <figure id="spinner">
     <a href='https://amzn.to/2wR3pbI/' target='_blank'/><img src="sthomp18.github.io/images/snickers_PNG13928.png" 
-                          ALT="investments"/></a>
+                          ALT="investments"/></a><br>
     <a href='https://amzn.to/2wQ86Sd/' target='_blank'/><img src="sthomp18.github.io/images/just because.png"
-                          ALT="login"/></a>
+                          ALT="login"/></a><br>
     <a href='https://amzn.to/2wS1GD8/' target='_blank'/><img src="sthomp18.github.io/images/bottles.png"
-                          ALT="territory"/></a>
+                          ALT="territory"/></a><br>
     <a href='https://amzn.to/2wS9BjM/' target='_blank'/><img src="sthomp18.github.io/images/gfwpi_white_space_width.png"
-                          ALT="login"/></a>
+                          ALT="login"/></a><br>
     <a href='https://amzn.to/2oN0P1Z/' target='_blank'/><img src="sthomp18.github.io/images/original-main.png"
-                          ALT="books"/></a>
+                          ALT="books"/></a><br>
     <a href='https://amzn.to/2oNyJUt/' target='_blank'/><img src="sthomp18.github.io/images/bj.png"
-                          ALT="login"/></a>
+                          ALT="login"/></a><br>
     <a href='https://amzn.to/2M7NRoK/' target='_blank'/><img src="sthomp18.github.io/images/kicproductimage-127615_strawberry_resized.png"
-                          ALT="login"/></a>
+                          ALT="login"/></a><br>
     <a href='https://amzn.to/2NVKGlG/' target='_blank'/><img src="sthomp18.github.io/images/tumblr_onjabnf4tk1txe8e9o1_500.png"
                           ALT="login"/></a>
   </figure>
