--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@ background-image:
                           ALT="login"/></a><br>
     <a href='https://amzn.to/2oN0P1Z/' target='_blank'/><img src="sthomp18.github.io/images/original-main.png"
                           ALT="books"/></a><br>
-    <a href='https://amzn.to/2oNyJUt/' target='_blank'/><img src="sthomp18.github.io/images/bj.png"
-                          ALT="login"/></a><br>
-    <a href='https://amzn.to/2M7NRoK/' target='_blank'/><img src="sthomp18.github.io/images/kicproductimage-127615_strawberry_resized.png"
-                          ALT="login"/></a><br>
+    <a hre<img srchomp18.github.io/images/bj.png"
+                          ALT="login"/>
+    <img src="sthomp18.github.io/images/kicproductimage-127615_strawberry_resized.png"
+                          ALT="login"/>
     <img src="sthomp18.github.io/images/tumblr_onjabnf4tk1txe8e9o1_500.png"
                           ALT="login"/>
   </figure>
