--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ background-image:
     <h1>Whats Up?</h1>
     <h2>Write a cool comment</h2>
     <figure class="avatar">
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/156381/profile/profile-80.jpg" /></figure>
+      <img src="sthomp18.github.io/images/giphy (1).gif" /></figure>
   </div>
   <div class="messages">
     <div class="messages-content"></div>
