--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ background-image:
         <div class="cube-image"><a href='https://sthomp18.github.io/shows.github.io/'><img src='sthomp18.github.io/images/giphy.gif' width='200px' height='200px'></a>3</div>
       </div>
       <div class="side">
-        <div class="cube-image"><a href='https://www.worldwildlife.org/species/polar-bear/' target='_blank'><img src='https://yt3.ggpht.com/-nWax0RVq7Gc/AAAAAAAAAAI/AAAAAAAAAAA/1HFXLeX0lLk/s900-c-k-no-mo-rj-c0xffffff/photo.jpg' width='200px' height='200px'></a>4</div>
+        <div class="cube-image"><a href='https://www.worldwildlife.org/species/polar-bear/' target='_blank'><img src='sthomp18.github.io/images/looking forward.jpg' width='200px' height='200px'></a>4</div>
       </div>
       <div class="side">
         <div class="cube-image"><a href='https://sthomp18.github.io/realestate/'><img src='sthomp18.github.io/images/contract_transform.gif' width='200px' height='200px' ALT='ART'></a>  5</div>
