--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ background-image:
                                   <img src='sthomp18.github.io/images/fh.jpg' 
                               height='50' width='50' ALT="instagram"></a></button></center>
                                <br>
-                  <center>    <button>
+                  <center><button>
       <img src='sthomp18.github.io/images/40875963_1816365625151386_383763329421672448_n.jpg' height='500px' width='600px'/>
                    <ul>
                          <li><a href='https://www.amazon.com/gp/product/B0195SWA28/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=diamondrolls-20&creative=9325&linkCode=as2&creativeASIN=B0195SWA28&linkId=429d7e5a347430b8155a8da1b5f1eca3/'>
@@ -176,7 +176,9 @@ background-image:
                          <li><a href='https://www.amazon.com/gp/product/B075DTD1FG/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=diamondrolls-20&creative=9325&linkCode=as2&creativeASIN=B075DTD1FG&linkId=c9c9fe5c52f694738a29809010849ee5/'>
                                   <img src='sthomp18.github.io/images/rolex_logo.jpg' height='50px' width='50px' target='_blank'/></a>
                                      </li>
-                          </ul></button</center>
+                          </ul>
+                           <h2>Last Kings, Black Pyramid, And Rolex</h2>
+                           </button</center>
    
               <br>
                            <br>
