--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ background-image:
                          </div> 
           
              <div class= "awesomecontainer"/>
-        <center><h2>Healthy Living, Positive Vibes, Prosperity</h2></center>
+        <center><h2>Healthy Living, Positive Vibes, Colonize</h2></center>
        <center>  <p>Maybe if candy was around and easily accessed there would be less drug-
                   addicted kids.The cube is rotatable and leads to different pages of this site. 
                   Use it to navigate through the site. Our mission is to help people live well
