--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                     h2       {
                              color: #FDEEF4;
                     }
-                    body{       
+                    div#carousel {  
+  background-image: url('http://thelistlove.files.wordpress.com/2014/03/26.jpg');
+                    }
+                             body{       
 background-image: 
          url('sthomp18.github.io/images/giphy (3).gif');
                             
