--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                     h2       {
                              color: #FDEEF4;
                     }
-    
+    div#carousel {  
+  background-image: url('sthomp18.github.io/images/580b585b2edbce24c47b2703.png');
+                    }
                              body{       
 background-image: 
          url('sthomp18.github.io/images/giphy (3).gif');
