--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                              color: #FDEEF4;
                     }
     div#carousel {  
-  background-image: url('sthomp18.github.io/images/580b585b2edbce24c47b2703.png');
+  background-image: url('sthomp18.github.io/images/26.jpg');
                     }
                              body{       
 background-image: 
