--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     }
     div#carousel {  
   background-image: url('sthomp18.github.io/images/26.jpg');
+             opacity:0.7;
                     }
                              body{       
 background-image: 
