--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ new Cube({
                   Use it to navigate through the site. Our mission is to help people live well
                   and make sure everyone knows atleast the basics of living a healthy and 
                   fullfilling life. If you want your product or app on this sites home page 
-                  feel free to contact us at</p></center>
+                  feel free to contact us at our chat box.</p></center>
          </div>    
      
          </footer>
