--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ cript src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
          
 <body>         
                    
-          <center>        <script type="text/javascript">
+              <script type="text/javascript">
 amzn_assoc_placement = "adunit0";
 amzn_assoc_search_bar = "true";
 amzn_assoc_tracking_id = "diamondrolls-20";
@@ -78,7 +78,7 @@ amzn_assoc_default_search_phrase = " Diamond Loose Stone, Round Brilliant Cut VV
 amzn_assoc_default_category = "All";
 amzn_assoc_linkid = "5d41cf99da13624e84e0167e0afe7d5f";
 </script>
-<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script> </center> 
+<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script> 
       <div class='banner'>
            <center>       <img class = "lit-image" src="sthomp18.github.io/images/giphy (2).gif" width="960" height="197"/></center>
                             </div>
