--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ cript src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
          
 <body>         
                    
-              <script type="text/javascript">
+    <center><script type="text/javascript">
 amzn_assoc_placement = "adunit0";
 amzn_assoc_search_bar = "true";
 amzn_assoc_tracking_id = "diamondrolls-20";
@@ -73,12 +73,12 @@ amzn_assoc_ad_mode = "search";
 amzn_assoc_ad_type = "smart";
 amzn_assoc_marketplace = "amazon";
 amzn_assoc_region = "US";
-amzn_assoc_title = "$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$";
-amzn_assoc_default_search_phrase = " Diamond Loose Stone, Round Brilliant Cut VVS Clarity";
+amzn_assoc_title = "Welcome";
+amzn_assoc_default_search_phrase = "$$$$$$$$$$$$$$$$";
 amzn_assoc_default_category = "All";
-amzn_assoc_linkid = "5d41cf99da13624e84e0167e0afe7d5f";
+amzn_assoc_linkid = "40a8b1dd37b54a8e1442e3173ff36cdb";
 </script>
-<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script> 
+<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script></center> 
       <div class='banner'>
            <center>       <img class = "lit-image" src="sthomp18.github.io/images/giphy (2).gif" width="960" height="197"/></center>
                             </div>
