--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ amzn_assoc_linkid = "40a8b1dd37b54a8e1442e3173ff36cdb";
                           ALT="login"/>
     <img src="sthomp18.github.io/images/kicproductimage-127615_strawberry_resized.png"
                           ALT="login"/>
-    <img src="sthomp18.github.io/images/4xs4CE6dJ.jpg"
+    <img src="sthomp18.github.io/images/Nissan-GT-R-Transparent-Background.png"
                           ALT="login"/>
   </figure>
 </div>
