--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ amzn_assoc_linkid = "40a8b1dd37b54a8e1442e3173ff36cdb";
   <figure id="spinner">
     <img src="sthomp18.github.io/images/snickers_PNG13928.png" 
                           ALT="investments"/>
-    <img src="sthomp18.github.io/images/just because.png"
+    <img src="sthomp18.github.io/images/download money.png"
                           ALT="login"/>
     <img src="sthomp18.github.io/images/bottles.png"
                           ALT="territory"/>
