--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                              color: #FDEEF4;
                     }
     div#carousel {  
-  background-image: url('sthomp18.github.io/images/26.jpg');
+  background-image: url('sthomp18.github.io/images/42539896_457864184725851_6688105214857183232_n.png');
              opacity:0.7;
                     }
                              body{       
