--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ amzn_assoc_linkid = "40a8b1dd37b54a8e1442e3173ff36cdb";
   <figure id="spinner">
     <img src="sthomp18.github.io/images/snickers_PNG13928.png" 
                           ALT="investments"/>
-    <img src="sthomp18.github.io/images/download money.png"
-                          ALT="login"/>
+    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=diamondrolls-20&marketplace=amazon&region=US&placement=B004G5Z1HM&asins=B004G5Z1HM&linkId=86b5e7414886ba76b80b0fc9a037214c&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+    </iframe>
     <img src="sthomp18.github.io/images/bottles.png"
                           ALT="territory"/>
     <img src="sthomp18.github.io/images/gfwpi_white_space_width.png"
