--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ amzn_assoc_ad_type = "smart";
 amzn_assoc_marketplace = "amazon";
 amzn_assoc_region = "US";
 amzn_assoc_title = "Welcome";
-amzn_assoc_default_search_phrase = "Welcome";
+amzn_assoc_default_search_phrase = "";
 amzn_assoc_default_category = "All";
 amzn_assoc_linkid = "40a8b1dd37b54a8e1442e3173ff36cdb";
 </script>
