--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
          <link href= 'sthomp18.github.io/style.css' rel= 'stylesheet'>
-       <link rel="icon" type="imahe/png" href="sthomp18.github.io/images/giphy(1).gif">
+       <link rel="icon" type="img/png" href="sthomp18.github.io/images/giphy(1).gif">
              <title>Diamondrolls / Healthy Living, Positive Vibes, Prosperity</title>
           
          <meta name="author" content="Solomon Shamir Thompson">
@@ -30,7 +30,7 @@
   background-image: url('sthomp18.github.io/images/42539896_457864184725851_6688105214857183232_n.png');
              opacity:1.0;
                     }
-   div#banner {
+   banner {
   background-image: url('sthomp18.github.io/images/giphy (2).gif');
             
                              body{       
