--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ background-image:
                     
 }
    </style>
-cript src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
          
    <div id="fb-root"></div>
       <script>(function(d, s, id) {
