--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   background-image: url('sthomp18.github.io/images/42539896_457864184725851_6688105214857183232_n.png');
              opacity:1.0;
                     }
-   div.banner {
+   .banner> div {
   background-image: url('sthomp18.github.io/images/giphy (2).gif');
             
                              body{       
