--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
                     }
                   
                     body{       
-background-image: 
-         url('sthomp18.github.io/images/giphy (1).gif');
+background-color: #ffffd8;
                 }
 
    </style>
