--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     }
                   
                     body{       
-background-color: #ffffd8;
+background-color: #ffd8d8;
                 }
 
    </style>
