--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ background-color: #ffd8d8;
 <span style="float:right" class="ss-icon" onclick="galleryspin('')">&gt;</span>
        
    
-         <div align="right" style="border:5px solid red">
+         <div id='bordercontrol'>
           <center><button> <iframe width="560px" height="315px" src="https://www.youtube.com/embed/rOb7AdxoYjY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                   </button></center>
        <center>  <button> <a href="https://sthomp18.github.io/shows.github.io/"> 
