--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ background-color: #ffd8d8;
   </div>
 
 </div>
-<div class="bg"></div><div>
+<div class="bg"></div></div>
          <script>
                   
               var $messages = $('.messages-content'),
