--- a/index.html
+++ b/index.html
@@ -117,10 +117,12 @@ background-color: #ffd8d8;
          <div class="bordercontrol">
           <center><button> <iframe width="560px" height="315px" src="https://www.youtube.com/embed/rOb7AdxoYjY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                   </button></center>
-       <center>  <button> <a href="https://sthomp18.github.io/shows.github.io/"> 
-      <img src='sthomp18.github.io/images/42289003_1991617484255457_7860708342673440768_n.jpg'
-           height="400px" width="560px"/>
-              </a></button></center>
+       <center><a href="https://share.robinhood.com/solomot17/" target="_blank"> <button> <slider>
+<slide><img src='shows.github.io/images/43747815_312491112866337_9043414762578247680_n.png'/></slide>
+<slide><img src='shows.github.io/images/43880658_698289397207556_2846847127156424704_n.png'/></slide>
+  <slide><img src='shows.github.io/images/43684211_881869788869172_5692318314294935552_n.png'/></slide>
+  <slide><img src='shows.github.io/images/43675419_1928704713862312_5733708639248580608_n.png'/></slide>
+ </slider></button></center>
            
       </div>
          
