--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@ background-color: #ffd8d8;
  </center>
           <br>
                      <center><button><a href="https://share.robinhood.com/solomot17/" target="_blank"><slider>
-<slide><img src='shows.github.io/images/43747815_312491112866337_9043414762578247680_n.png'/></slide>
-<slide><img src='shows.github.io/images/43880658_698289397207556_2846847127156424704_n.png'/></slide>
-  <slide><img src='shows.github.io/images/43684211_881869788869172_5692318314294935552_n.png'/></slide>
-  <slide><img src='shows.github.io/images/43675419_1928704713862312_5733708639248580608_n.png'/></slide>
+<slide><img src='sthomp18.github.io/images/433515-636582821959720152_338x600_thumb.jpg'/></slide>
+<slide><img src='sthomp18.github.io/images/2017-Ford-GT-front-three-quarter-02.jpg'/></slide>
+  <slide><img src='sthomp18.github.io/images/3_membership_slideshow_1.jpg'/></slide>
+  <slide><img src='sthomp18.github.io/images/2017-Ford-GT-front-three-quarter-02.jpg'/></slide>
  </slider></button></center>     <br>
                          <br>
                          
